--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
               alt="Icon de Vis'Sport"
             />
           </a>
-    
+          <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+            <ul class="menu__list list-unstyled">
+              <li class="menu__item">
+                <a class="menu__link" href="works.html">Works</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="about.html">About</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="contact.html">Contact</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="team.html">Team</a>
+              </li>
+            </ul>
+          </nav>
           <button
             class="header__menu-btn menu-btn"
             aria-label="menu"
