--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
             <span class="menu-btn__bar" aria-hidden="true"></span>
           </button>
     </header>
+    <h1>Vis'Sport</h1>
 </body>
 </html>
