ajout images/header html

--- a/index.html
+++ b/index.html
@@ -12,23 +12,34 @@
         <a class="header__logo-link" href="/">
             <img
               class="header__logo"
-              src="/assets/img/icon.avif"
+              src="/assets/Images/logo/logovissport.avif"
               alt="Icon de Vis'Sport"
             />
           </a>
           <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+            <img class="header__menu-img" src="./assets/Images/icons/ballonderugby.avif" alt="ballon de rugby en image">
+            <img class="header__menu-img" src="./assets/Images/icons/balledefoot.avif" alt="ballon de rugby en image">
+            <img class="header__menu-img" src="./assets/Images/icons/balledebasket.avif" alt="ballon de rugby en image">
             <ul class="menu__list list-unstyled">
               <li class="menu__item">
-                <a class="menu__link" href="works.html">Works</a>
+                <a class="menu__link" href="programme.html">Programme</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="about.html">About</a>
+                <a class="menu__link" href="invites.html">Invités</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="contact.html">Contact</a>
+                <a class="menu__link" href="apropos.html">À propos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="team.html">Team</a>
+                <a class="menu__link" href="infospratiques.html">Infos pratiques</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="contact.html">Nous contacter</a>
+              </li>
+              <li>
+                <button class="button__billet">
+                  <a class="menu__link" href="billeterie.html">Billeterie</a>
+                </button>
               </li>
             </ul>
           </nav>
@@ -41,6 +52,7 @@
             <span class="menu-btn__bar" aria-hidden="true"></span>
           </button>
     </header>
+    
     <h1>Vis'Sport</h1>
 </body>
 </html>
