--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     src="./assets/Images/médias/axone.avif" 
     alt="image du stade de l'axone"
     >
-    <p class="hero__txt-annexe">6 rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
+    <p class="hero__txt-annexe txt-annexe">6 rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
     <button class="hero__btn button__normal">Voir sur la carte</button>
     <h2 class="hero__sub-title sub-title">Bienvenue au Festival Vis'Sport</h2>
     <p class="hero__txt txt">Rendez-vous à l’<b>Axone</b> de <b>Montbéliard</b> pour une immersion cinématographique dédiée au sport ! <b>Vis'Sport</b> célèbre l’esprit de compétition et la persévérance des athlètes à travers des films, débats et rencontres. Passionnés de <b>sport</b> ou de <b>cinéma</b>, ne manquez pas cette fusion unique des deux univers !</p>
@@ -140,9 +140,10 @@
         >
         <a class="caroussel__link caroussel__link-invites" href="/programme.html/#nelson"></a>
         </img>
-        <button class="caroussel__button-invites button__normal">
-          <a href="invites.html">Invités présents</a>
-        </button>
+
+        <a href="invites.html">
+        <button class="caroussel__button-invites button__normal"> Invités présents</button>
+        </a>
       </div>
       
 
@@ -150,7 +151,55 @@
     </article>
   </main>
   <footer class="footer">
-    
+    <a href="/">
+      <img
+        class="footer__logo"
+        src="./assets/Images/logo/logovissport.avif"
+        alt="Icon de Vis'Sport"
+      />
+    </a>
+
+    <a href="/billeterie.html">
+      <button class="footer__button button__billet">Billeterie</button>
+    </a>
+
+    <ul>
+      <li>
+        <a href="instagram.com">
+          <img 
+          class="footer__img footer__img-instagram"
+          src="./assets/Images/icons/instagram-icon.avif" 
+          alt="logo instagram"
+          />
+      </a>
+    </li>
+      <li>
+        <a href="facebook.com">
+          <img 
+          class="footer__img footer__img-facebook"
+          src="./assets/Images/icons/facebook-icon.avif" 
+          alt="logo facebook">
+      </a>
+    </li>
+      <li>
+        <a href="linkedin.com">
+          <img 
+          class="footer__img footer__img-linkedin"
+          src="./assets/Images/icons/linkedin-icon.avif" 
+          alt="logo linkedin">
+        </a>
+      </li>
+      <li>
+        <a href="tiktok.com">
+          <img 
+          class="footer__img footer__img-tiktok"
+          src="./assets/Images/icons/tiktok-icon.avif" 
+          alt="logo tiktok">
+        </a>
+      </li>
+    </ul>
+    <p class="footer__txt-annexe txt-annexe"> 6 Rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
+    <p class="footer__infos infos">plus d'info</p>
   </footer>
 </body>
 </html>
