--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
                 <a class="menu__link" href="contact.html">Nous contacter</a>
               </li>
               <li>
-                <button class="button__billet">
-                  <a class="menu__link" href="billeterie.html">Billeterie</a>
-                </button>
+                <a>
+                  <button class="button__billet">
+                    <a class="menu__link" href="billeterie.html">Billeterie</a>
+                  </button>
+                </a>
               </li>
             </ul>
           </nav>
@@ -106,9 +108,9 @@
         <a class="caroussel__link caroussel__link-films" href="/programme.html/#rush"></a>
         </img>
 
-        <button class="caroussel__button-films button__normal">
-          <a href="programme.html">Programation</a>
-        </button>
+        <a href="programme.html">
+          <button class="caroussel__button-films button__normal">Programation</button>
+        </a>
       </div>
       
 
@@ -142,7 +144,7 @@
         </img>
 
         <a href="invites.html">
-        <button class="caroussel__button-invites button__normal"> Invités présents</button>
+          <button class="caroussel__button-invites button__normal"> Invités présents</button>
         </a>
       </div>
       
