--- a/apropos.html
+++ b/apropos.html
@@ -56,5 +56,104 @@
             </ul>
           </nav>
     </header>
+    <main>
+        <div class="hero hero--home">
+            <h1 class="hero__title title">À propos</h1>
+            <h2 class="hero__sub-title sub-title">L'historique du festival</h2>
+        </div>
+
+        <section class="edition">
+        <ul class="edition__list list">
+            <li>
+                <h2 class="edition__sub-title sub-title">Première édition</h2>
+                <h3 class="edition__sub--sub-title sub--sub-title">2023</h3>
+                <p class="edition__txt txt">Lancée en 2023, la première édition a posé les bases de cet événement unique, réunissant athlètes, cinéastes et passionnés autour de projections de films sportifs, de documentaires inspirants et de débats captivants. <br><br>
+                    Avec des invités prestigieux et une sélection éclectique, le festival a marqué les esprits dès sa création.</p>
+            </li>
+            <li>
+                <h2 class="edition__sub-title sub-title">Deuxième édition</h2>
+                <h3 class="edition__sub--sub-title sub--sub-title">2024</h3>
+                <p class="edition__txt txt">En 2024, le festival a pris de l’ampleur, attirant un public encore plus large et proposant des activités variées, notamment des ateliers, des masterclasses et des rencontres avec des légendes du sport. <br><br>
+                    Le thème central, "La résilience à travers le sport", a inspiré une programmation poignante et diversifiée.</p>
+            </li>
+            <li>
+                <h2 class="edition__sub-title sub-title">Édition actuelle</h2>
+                <h3 class="edition__sub--sub-title sub--sub-title">2025</h3>
+                <p class="edition__txt txt">Cette année, le Festival Sport & Cinéma célèbre sa troisième édition avec un programme encore plus ambitieux. Axée sur "L'unité dans la diversité", cette édition explore comment le sport transcende les frontières culturelles et unit les générations.<br><br>
+                    Des avant-premières exclusives, des compétitions de courts métrages, et des événements interactifs font de ce rendez-vous un incontournable pour tous les amoureux de sport et de cinéma.</p>
+            </li>
+        </ul>    
+        </section>
+
+        <section class="equipe">
+            <h1 class="equipe__titre titre">Notre équipe</h1>
+            <ul class="equipe__list list">
+                <li class="equipe__list-elt">
+                    <h2 class="equipe__sub-title--nom sub-title">Claire Duval</h2>
+                    <h2 class="equipe__sub-title-poste">Directrice du Festival</h2>
+                    <ul class="equipe__list-respo list">
+                        <li>Supervise l'ensemble de l'organisation.</li>
+                        <li>Définit les grandes lignes artistiques et thématiques du festival.</li>
+                        <li>Gère les relations avec les partenaires stratégiques et les sponsors.</li>
+                    </ul>
+                </li>
+                <li class="equipe__list-elt">
+                    <h2 class="equipe__sub-title--nom sub-title">Malik Lemoine</h2>
+                    <h2 class="equipe__sub-title-poste">Responsable de la Programmation</h2>
+                    <ul class="equipe__list-respo list">
+                        <li>Sélectionne les films et documentaires présentés au festival.</li>
+                        <li>Travaille avec les réalisateurs et producteurs pour organiser les avant-premières.</li>
+                        <li>S'assure que la programmation respecte le thème central et l’équilibre entre les genres.</li>
+                    </ul>
+                </li>
+                <li class="equipe__list-elt">
+                    <h2 class="equipe__sub-title--nom sub-title">Sophie Nguyen</h2>
+                    <h2 class="equipe__sub-title-poste">Chargée des Relations avec les Invités</h2>
+                    <ul class="equipe__list-respo list">
+                        <li>Organise l'accueil des invités (cinéastes, sportifs, conférenciers).</li>
+                        <li>Coordonne les séances de dédicaces, interviews, et masterclasses.</li>
+                        <li>S'assure du confort des participants pendant l'événement.</li>
+                    </ul>
+                </li>
+                <li class="equipe__list-elt">
+                    <h2 class="equipe__sub-title--nom sub-title">Amara Diallo</h2>
+                    <h2 class="equipe__sub-title-poste">Responsable Communication</h2>
+                    <ul class="equipe__list-respo list">
+                        <li>Élaborer la stratégie de communication et de promotion.</li>
+                        <li>Gérer les réseaux sociaux, les newsletters, et le site web du festival.</li>
+                        <li>Assurer la couverture en temps réel de l'événement.</li>
+                    </ul>
+                </li>
+                <li class="equipe__list-elt">
+                    <h2 class="equipe__sub-title--nom sub-title">Julien Morel</h2>
+                    <h2 class="equipe__sub-title-poste">Responsable Logistique</h2>
+                    <ul class="equipe__list-respo list">
+                        <li>Coordonne la mise en place des sites (salles de projection, stands, espaces VIP).</li>
+                        <li>Gère les plannings, les transports, et la restauration pour l’équipe et les invités.</li>
+                        <li>Anticipe et résout les imprévus logistiques.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section class="charte">
+            <h1 class="charte__title-N">Engagement</h1>
+            <h1 class="charte__title-O">Thématiques</h1>
+            <ul class="charte__list list">
+                <li class="charte__list-elt">
+                    <h2 class="charte__sub-title sub-title">Sélection des Œuvres</h2>
+                    <p class="charte__txt txt">Tous les films et documentaires présentés sont choisis pour refléter les valeurs et la thématique du festival.</p>
+                </li>
+                <li class="charte__list-elt">
+                    <h2 class="charte__sub-title sub-title">Conférences et Débats</h2>
+                    <p class="charte__txt txt">Les discussions avec invités et experts approfondissent les enjeux liés à l’unité, la diversité et les défis contemporains.</p>
+                </li>
+                <li class="charte__list-elt">
+                    <h2 class="charte__sub-title sub-title">Éxpériences interactives</h2>
+                    <p class="charte__txt txt">Ateliers, compétitions sportives et échanges créent un espace où le public devient acteur de ces valeurs.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
