--- a/apropos.html
+++ b/apropos.html
@@ -155,5 +155,56 @@
             </ul>
         </section>
     </main>
+    <footer class="footer">
+        <a href="/">
+          <img
+            class="footer__logo"
+            src="./assets/Images/logo/logovissport.avif"
+            alt="Icon de Vis'Sport"
+          />
+        </a>
+    
+        <a href="/billeterie.html">
+          <button class="footer__button button__billet">Billeterie</button>
+        </a>
+    
+        <ul>
+          <li>
+            <a href="instagram.com">
+              <img 
+              class="footer__img footer__img-instagram"
+              src="./assets/Images/icons/instagram-icon.avif" 
+              alt="logo instagram"
+              />
+          </a>
+        </li>
+          <li>
+            <a href="facebook.com">
+              <img 
+              class="footer__img footer__img-facebook"
+              src="./assets/Images/icons/facebook-icon.avif" 
+              alt="logo facebook">
+          </a>
+        </li>
+          <li>
+            <a href="linkedin.com">
+              <img 
+              class="footer__img footer__img-linkedin"
+              src="./assets/Images/icons/linkedin-icon.avif" 
+              alt="logo linkedin">
+            </a>
+          </li>
+          <li>
+            <a href="tiktok.com">
+              <img 
+              class="footer__img footer__img-tiktok"
+              src="./assets/Images/icons/tiktok-icon.avif" 
+              alt="logo tiktok">
+            </a>
+          </li>
+        </ul>
+        <p class="footer__txt-annexe txt-annexe"> 6 Rue du Commandant Pierre Rossel, 25200 Montbéliard</p>
+        <p class="footer__infos infos">plus d'info</p>
+      </footer>
 </body>
 </html>
