--- a/apropos.html
+++ b/apropos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vis'Sport</title>
+    <title>Vis'Sport à propos</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
     <script type="module" src="/src/js/script.js"></script>
 </head>
