--- a/programme.html
+++ b/programme.html
@@ -60,120 +60,190 @@
         <div class="hero">
             <h1 class="hero__title title">Programmation</h1>
         </div>
-        <ul>
+        <ul class="programmation__list">
             <li>
+                <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+                <h2 class="programmation__sub-title--noir sub-title">19/09/25</h2>
+                <img
+                class="programmation__img img" 
+                src="./assets/Images/médias/spacejamaffiche1.avif" 
+                alt="affiche du film Space Jam"
+                loading="lazy">
+                <ul>
+                    <li>
+                        <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Joe Pytka</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">1h28m</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                        <a class="programmation__link link" 
+                        href="https://youtu.be/T8xjeDuhq14?si=Q74uWw3H5IexgwV2">Bande annonce</a>
+                        <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                        <p class="programmation__txt txt">Michael Jordan s’allie aux Looney Tunes pour un match épique contre des extraterrestres, mêlant humour, action et basket. Un classique familial qui célèbre l’esprit d’équipe et le sport dans un univers plein d’aventures et de fun !</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+                <h2 class="programmation__sub-title--noir sub-title">19/09/25</h2>
+                <img
+                class="programmation__img img" 
+                src="./assets/Images/médias/rushaffiche1.avif" 
+                alt="affiche du film Rush 2013"
+                loading="lazy">
+                <ul>
+                    <li>
+                        <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Ron Howard</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">2h02m</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                        <a class="programmation__link link" 
+                        href="https://youtu.be/4XA73ni9eVs?si=42LZ2DIT-6xSpPEN">Bande annonce</a>
+                        <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                        <p class="programmation__txt txt">Dans les années 1970, la rivalité intense entre les pilotes de Formule 1 James Hunt et Niki Lauda atteint son paroxysme. Sur fond de vitesse et de danger, le film retrace leur quête de gloire, l'adrénaline des courses, et les sacrifices d'une compétition sans merci.</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+                <h2 class="programmation__sub-title--noir sub-title">19/09/25</h2>
+                <img
+                class="programmation__img img" 
+                src="./assets/Images/médias/goal_naissance_d_un_prodige1.avif" 
+                alt="affiche du film Goal naissance d'un prodige"
+                loading="lazy">
+                <ul>
+                    <li>
+                        <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Danny Canon</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">2h00m</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                        <a class="programmation__link link" 
+                        href="https://www.allocine.fr/video/player_gen_cmedia=18397991&cfilm=56435.html">Bande annonce</a>
+                        <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                        <p class="programmation__txt txt">Santiago, jeune footballeur talentueux issu d'un milieu modeste, se voit offrir une chance de réaliser son rêve en intégrant un grand club anglais. Entre défis, sacrifices et persévérance, il lutte pour prouver sa valeur sur le terrain et s’imposer dans le monde exigeant du football professionnel.</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+                <h2 class="programmation__sub-title--noir sub-title">20/09/25</h2>
+                <img
+                class="programmation__img img" 
+                src="./assets/Images/médias/shaolin_soccer.avif" 
+                alt="affiche du film Shaolin Soccer"
+                loading="lazy">
+                <ul>
+                    <li>
+                        <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Stephen Chow</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">1h53m</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                        <a class="programmation__link link" 
+                        href="https://youtu.be/KEWUDWYDdYs?si=XOrbH8jLdcBrotlZ">Bande annonce</a>
+                        <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                        <p class="programmation__txt txt">Un ancien maître de kung-fu réunit ses anciens coéquipiers pour former une équipe de football unique, combinant arts martiaux et sport. Ensemble, ils affrontent des adversaires redoutables dans un tournoi spectaculaire, mêlant humour, action, et prouesses athlétiques.</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="programmation__sub-title--orange sub-title">Date</h2>
+                <h2 class="programmation__sub-title--noir sub-title">20/09/25</h2>
+                <img
+                class="programmation__img img" 
+                src="./assets/Images/médias/les" 
+                alt="affiche du film Shaolin Soccer"
+                loading="lazy">
+                <ul>
+                    <li>
+                        <h2 class="programmation__sub-title--orange sub-title">Réalisateur</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Stephen Chow</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Durée</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">1h53m</h2>
+                        <h2 class="programmation__sub-title--orange sub-title">Langage</h2>
+                        <h2 class="programmation__sub-title--noir sub-title">Français</h2>
+                        <a class="programmation__link link" 
+                        href="https://youtu.be/KEWUDWYDdYs?si=XOrbH8jLdcBrotlZ">Bande annonce</a>
+                        <h2 class="programmation__sub-title--orange sub-title">Synopsis</h2>
+                        <p class="programmation__txt txt">Un ancien maître de kung-fu réunit ses anciens coéquipiers pour former une équipe de football unique, combinant arts martiaux et sport. Ensemble, ils affrontent des adversaires redoutables dans un tournoi spectaculaire, mêlant humour, action, et prouesses athlétiques.</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <p></p>
                 <p></p>
                 <img src="" alt="">
                 <ul>
                     <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
                         <a href=""></a>
+                        <h2></h2>
                         <p></p>
                     </li>
                 </ul>
             </li>
             <li>
                 <p></p>
+                <p></p>
                 <img src="" alt="">
                 <ul>
                     <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
                         <a href=""></a>
+                        <h2></h2>
                         <p></p>
                     </li>
                 </ul>
             </li>
             <li>
                 <p></p>
+                <p></p>
                 <img src="" alt="">
                 <ul>
                     <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
                         <a href=""></a>
+                        <h2></h2>
                         <p></p>
                     </li>
                 </ul>
             </li>
             <li>
                 <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <a href=""></a>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
                 <p></p>
                 <img src="" alt="">
                 <ul>
                     <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
+                        <h2></h2>
                         <a href=""></a>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <a href=""></a>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <a href=""></a>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <a href=""></a>
-                        <p></p>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <p></p>
-                <img src="" alt="">
-                <ul>
-                    <li>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <a href=""></a>
+                        <h2></h2>
                         <p></p>
                     </li>
                 </ul>
