--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Vis'Sport</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
     <script type="module" src="/src/js/script.js"></script>
+    <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="./assets/favicons/site.webmanifest" />
 </head>
 <body>
     <header class="header">
