--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vis'Sport</title>
-    <link rel="stylesheet" href="/src/css/style.css"/>
-    <script type="module" src="/src/js/script.js"></script>
     <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg" />
     <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
     <link rel="manifest" href="./assets/favicons/site.webmanifest" />
+
+    <title>Vis'Sport</title>
+
+    <link rel="stylesheet" href="/src/css/style.css"/>
+    <script type="module" src="/src/js/script.js"></script>
 </head>
+
 <body>
     <header class="header">
         <a class="header__logo-link" href="/">
@@ -172,7 +175,7 @@
 
     <ul>
       <li>
-        <a href="instagram.com">
+        <a href="https://www.instagram.com/">
           <img 
           class="footer__img footer__img-instagram"
           src="./assets/Images/icons/instagram-icon.avif" 
@@ -181,7 +184,7 @@
       </a>
     </li>
       <li>
-        <a href="facebook.com">
+        <a href="https://www.facebook.com/">
           <img 
           class="footer__img footer__img-facebook"
           src="./assets/Images/icons/facebook-icon.avif" 
@@ -189,7 +192,7 @@
       </a>
     </li>
       <li>
-        <a href="linkedin.com">
+        <a href="https://www.linkedin.com/">
           <img 
           class="footer__img footer__img-linkedin"
           src="./assets/Images/icons/linkedin-icon.avif" 
@@ -197,7 +200,7 @@
         </a>
       </li>
       <li>
-        <a href="tiktok.com">
+        <a href="https://www.tiktok.com/">
           <img 
           class="footer__img footer__img-tiktok"
           src="./assets/Images/icons/tiktok-icon.avif" 
