--- a/apropos.html
+++ b/apropos.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./assets/favicons/favicon.svg" />
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png" />
+    <link rel="manifest" href="./assets/favicons/site.webmanifest" />
+
     <title>Vis'Sport à propos</title>
+
     <link rel="stylesheet" href="/src/css/style.css"/>
     <script type="module" src="/src/js/script.js"></script>
 </head>
@@ -170,7 +177,7 @@
     
         <ul>
           <li>
-            <a href="instagram.com">
+            <a href="https://www.instagram.com/">
               <img 
               class="footer__img footer__img-instagram"
               src="./assets/Images/icons/instagram-icon.avif" 
@@ -179,7 +186,7 @@
           </a>
         </li>
           <li>
-            <a href="facebook.com">
+            <a href="https://www.facebook.com/">
               <img 
               class="footer__img footer__img-facebook"
               src="./assets/Images/icons/facebook-icon.avif" 
@@ -187,7 +194,7 @@
           </a>
         </li>
           <li>
-            <a href="linkedin.com">
+            <a href="https://www.linkedin.com/">
               <img 
               class="footer__img footer__img-linkedin"
               src="./assets/Images/icons/linkedin-icon.avif" 
@@ -195,7 +202,7 @@
             </a>
           </li>
           <li>
-            <a href="tiktok.com">
+            <a href="https://www.tiktok.com/">
               <img 
               class="footer__img footer__img-tiktok"
               src="./assets/Images/icons/tiktok-icon.avif" 
