--- a/index.html
+++ b/index.html
@@ -124,32 +124,32 @@
 
 
       <div class="caroussel">
+        <a class="caroussel__link caroussel__link-invites" href="/invites.html/#julien">
         <img
         class="caroussel__img caroussel__img-invites" 
         src="./assets/Images/médias/julien_farault1.avif" 
         alt="affiche du réalisateur Julien Farault"
         loading="lazy"
         >
-        <a class="caroussel__link caroussel__link-invites" href="/programme.html/#julien"></a>
-        </img>
+        </a>
 
-        <img 
-        class="caroussel__img caroussel__img-invites"
-        src="./assets/Images/médias/teddy_riner.avif" 
-        alt="affiche du célèbre judoka Teddy Riner"
-        loading="lazy"
-        >
-        <a class="caroussel__link caroussel__link-invites" href="/programme.html/#teddy"></a>
-        </img>
+        <a class="caroussel__link caroussel__link-invites" href="/invites.html/#teddy">
+          <img
+          class="caroussel__img caroussel__img-invites" 
+          src="./assets/Images/médias/teddy_riner.avif" 
+          alt="affiche du judoka Teddy Riner"
+          loading="lazy"
+          >
+          </a>
 
-        <img 
-        class="caroussel__img caroussel__img-invites"
-        src="./assets/Images/médias/nelson_monfort1.avif" 
-        alt="affiche du journaliste sportif Nelson Monfort"
-        loading="lazy"
-        >
-        <a class="caroussel__link caroussel__link-invites" href="/programme.html/#nelson"></a>
-        </img>
+          <a class="caroussel__link caroussel__link-invites" href="/invites.html/#nelson">
+            <img
+            class="caroussel__img caroussel__img-invites" 
+            src="./assets/Images/médias/nelson_monfort1.avif" 
+            alt="affiche du journaliste Nelson Monfort"
+            loading="lazy"
+            >
+            </a>
 
         <a href="invites.html">
           <button class="caroussel__button-invites button__normal"> Invités présents</button>
