--- a/infospratiques.html
+++ b/infospratiques.html
@@ -67,8 +67,14 @@
     <main>
         <div class="hero">
             <h1 class="hero__title title">Informations pratiques</h1>
+            <h2 class="hero__sub-title sub-title">Transports en commun</h2>
+            <img class="hero__img img"
+            src="./assets/Images/médias/buse_volity1.avif" 
+            alt="photo de bus evolity dans Montbeliard"
+            loading="lazy">
         </div>
 
+        
 
 
     <footer class="footer">
