--- a/invites.html
+++ b/invites.html
@@ -73,6 +73,7 @@
             <ul>
                 <li>
                     <img 
+                    id="teddy"
                     class="invites__img"
                     src="./assets/Images/médias/teddy_riner.avif" 
                     alt="portrait de Teddy Riner"
@@ -85,6 +86,7 @@
                 </li>
                 <li>
                     <img 
+                    id="julien"
                     class="invites__img"
                     src="./assets/Images/médias/julien_farault1.avif" 
                     alt="portrait de Julien Farault"
@@ -98,6 +100,7 @@
                 </li>
                 <li>
                     <img 
+                    id="nelson"
                     class="invites__img"
                     src="./assets/Images/médias/nelson_monfort1.avif" 
                     alt="Portrait de Nelson Monfort"
