--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                       rows="5"
                     ></textarea>
                   </div>
-                <button class="contact__form--btn button__normal" type="submit">Envoyer</button>
+                <button class="contact__form--btn button__normal" type="submit">Envoyer !</button>
               </form>
         </div>
     </main>
